# DailyPlan

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  styles.css
.github/workflows/: release.yml
crates/domain/: Cargo.toml
crates/domain/src/: checklist.rs  lib.rs  task.rs
crates/engine/: Cargo.toml
crates/engine/src/: conflict.rs  lib.rs  render.rs  scheduler.rs
crates/engine/templates/: checklist.typ  checklist_multi.typ
docs/superpowers/plans/: 2026-07-04-task-scheduling-enhancements.md
docs/superpowers/specs/: 2026-07-04-task-scheduling-enhancements-design.md  2026-07-05-multi-page-ui-design.md
icons/: icon.icns
scripts/: download-typst.sh
src/: app.rs  calendar.rs  day_view.rs  main.rs  sidebar.rs  task_editor.rs  task_list.rs  task_manage.rs  tauri.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.dev-data/: dailyplan.db
src-tauri/capabilities/: default.json
src-tauri/migrations/: V001__init.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  printing.rs
