[package]
name = "dailyplan-ui"
version = "0.2.0"
edition = "2021"

[dependencies]
dailyplan-domain = { path = "crates/domain" }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "HtmlInputElement", "HtmlSelectElement", "Element", "EventTarget", "DomRect"] }
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri", "crates/domain", "crates/engine"]
resolver = "2"

# Tauri 发布体积优化指南: https://tauri.app/concept/size/#cargo-configuration
# profile 只能在 workspace 根定义。
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
